--- a/apps/integration-tesla/package.json
+++ b/apps/integration-tesla/package.json
@@ -12,11 +12,13 @@
   "author": "Alexey Sednev",
   "license": "MIT",
   "dependencies": {
+    "request": "^2.88.2",
     "teslajs": "^4.10.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.0",
+    "@types/request": "^2.48.8",
     "@types/teslajs": "^4.9.0",
     "rimraf": "^3.0.2"
   }
