--- a/apps/homebridge-plugin-tesla-enphase/package.json
+++ b/apps/homebridge-plugin-tesla-enphase/package.json
@@ -4,8 +4,7 @@
   "description": "Smart charing Tesla vehicles using solar through Enphase Envoy",
   "displayName": "Tesla Enphase Smart Charging",
   "author": "Alexey Sednev",
-  "license": "Apache-2.0"
-  ,
+  "license": "Apache-2.0",
   "engines": {
     "node": ">=14.18.1",
     "homebridge": ">=1.3.5"
@@ -20,7 +19,12 @@
   "keywords": [
     "homebridge-plugin"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "core": "../core",
+    "homebridge-lib": "^5.6.8",
+    "integration-tesla": "../integration-tesla",
+    "ts-essentials": "^9.3.0"
+  },
   "devDependencies": {
     "@types/node": "^16.10.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
