--- a/apps/core/package.json
+++ b/apps/core/package.json
@@ -8,7 +8,9 @@
     "start": "tsc --watch",
     "build": "rimraf ./dist && tsc",
     "dev": "rimraf ./dist && tsc && node dist/debug.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:ci": "jest --ci",
+    "test:watch": "jest --watch"
   },
   "author": "Alexey Sednev",
   "license": "MIT",
@@ -16,7 +18,10 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.1",
     "@types/node": "^18.11.0",
-    "rimraf": "^3.0.2"
+    "jest": "^29.2.2",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.3"
   }
 }
