--- a/apps/homebridge-plugin-tesla-enphase/package.json
+++ b/apps/homebridge-plugin-tesla-enphase/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "core": "../core",
     "homebridge-lib": "^5.6.8",
+    "integration-enphase": "../integration-enphase",
     "integration-tesla": "../integration-tesla",
     "ts-essentials": "^9.3.0"
   },
