--- a/apps/integration-tesla/package.json
+++ b/apps/integration-tesla/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "start": "tsc --watch",
+    "build": "rimraf ./dist && tsc",
     "dev": "rimraf ./dist && tsc && node dist/debug.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
